<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D3D3D3">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="80dp"
        android:gravity="center"
        android:text="@string/Registro_texto"
        android:textSize="20dp"
        android:textColor="@color/black" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/usuario"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/id"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/id_usuario"
            android:inputType="textPersonName"
            android:text="" />



        <EditText
            android:id="@+id/nombre"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_marginStart="-325dp"
            android:layout_marginTop="70dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/apellido"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_marginStart="-325dp"
            android:layout_marginTop="110dp"
            android:ems="10"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/Correo"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_marginStart="-325dp"
            android:layout_marginTop="150dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Correo_Usuario"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/contraseña"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_marginStart="-325dp"
            android:layout_marginTop="190dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/contraseña2"
            android:layout_width="326dp"
            android:layout_height="48dp"
            android:layout_marginStart="-326dp"
            android:layout_marginTop="228dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="278dp"
            android:layout_height="29dp"
            android:layout_marginStart="-310dp"
            android:layout_marginTop="270dp"
            android:gravity="center"
            android:text="@string/Fecha_nacimiento"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/Nacionalidad"
            style="?android:spinnerStyle"
            android:layout_width="290dp"
            android:layout_height="51dp"
            android:layout_marginStart="-280dp"
            android:layout_marginTop="390dp"
            android:contentDescription="@string/Ingrese_Datos"
            android:gravity="center"
            android:textColor="#4F4F4F" />

        <Button
            android:id="@+id/btnAceptar"
            style="?android:spinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-280dp"
            android:layout_marginTop="450dp"
            android:text="@string/aceptar"
            android:textColor="@color/black"
            android:textSize="22dp" />

        <Button
            android:id="@+id/btnCancelar"
            style="?android:spinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="450dp"

            android:text="@string/cancelar"
            android:textColor="@color/black"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-260dp"
            android:layout_marginTop="350dp"
            android:gravity="center"
            android:text="@string/Nacionalidad"
            android:textColor="@color/black"
            android:textSize="22dp" />

        <Button
            android:id="@+id/btnNacimiento"
            style="?android:spinnerStyle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-250dp"
            android:layout_marginTop="310dp"
            android:gravity="center"
            android:onClick="OpenDatePicker"
            android:text="ENERO 01 2020"
            android:textColor="#4F4F4F"
            android:textSize="20dp" />



        <TextView
            android:id="@+id/resultado2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-200dp"
            android:layout_marginTop="240dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20dp" />

    </LinearLayout>


</LinearLayout>