<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="#D3D3D3"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/Ingrese_Datos"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />
    <ImageButton
        android:id="@+id/nortificacion"
        android:layout_width="60dp"
        android:layout_height="62dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="-80dp"
        android:background="@drawable/registrarse"
        android:gravity="center"

        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="193dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/usuario"
        android:contentDescription="@string/todo"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/Correo"
        android:layout_width="289dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Correo_Usuario"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        />

    <EditText
        android:id="@+id/Contraseña"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginStart="-290dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        />

    <TextView
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginStart="-250dp"
        android:gravity="center"
        android:text="@string/Registro"
        android:textColor="@color/black"
        android:textSize="16dp" />

    <Button
        android:id="@+id/loginbtn"
        style="?android:spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginStart="-170dp"
        android:gravity="center"
        android:text="@string/iniciar_session"
        android:textColor="@color/black"
        android:textSize="18dp" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginStart="-180dp"
        android:gravity="center"
        android:text="@string/recordar"
        android:textSize="16dp"
         />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-80dp"
        android:gravity="center"
        android:layout_marginTop="300dp"
        android:minHeight="48dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20dp"
        />
    </LinearLayout>
</LinearLayout>