<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D3D3D3">



    <Button
        android:id="@+id/cerrar_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_session"
        android:layout_marginStart="150dp"
        android:gravity="center"
        android:layout_marginTop="280dp"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/nortificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nortificacion"
        android:layout_marginStart="150dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/mapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapa"
        android:layout_marginStart="150dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"/>



</LinearLayout>